fix search in mobile nav and jump to content scroll

--- a/src/css/components/_content.scss
+++ b/src/css/components/_content.scss
@@ -105,6 +105,7 @@
     .section {
       margin-top: -$header-height-large;
       padding-top: $header-height-large;
+      scroll-margin-top: $gap;
     }
   }
 
